--- a/package.json
+++ b/package.json
@@ -6,17 +6,14 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@fontsource/roboto": "^4.5.8",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.8.4",
-    "@mui/joy": "^5.0.0-alpha.40",
     "@mui/material": "^5.10.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "file-saver": "^2.0.5",
     "firebase": "^9.9.2",
-    "material-ui-image": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
@@ -24,6 +21,7 @@
     "react-redux-firebase": "^3.11.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "redux": "^4.2.0",
     "redux-firestore": "^1.0.0",
     "web-vitals": "^2.1.4"
