--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
+    "react-google-charts": "^4.0.0",
     "react-minimal-pie-chart": "^8.3.0",
     "react-redux": "^8.0.2",
     "react-redux-firebase": "^3.11.0",
