--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.95",
     "@mui/material": "^5.10.0",
+    "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,13 +22,11 @@
     "react-google-charts": "^4.0.0",
     "react-minimal-pie-chart": "^8.3.0",
     "react-redux": "^8.0.2",
-    "react-redux-firebase": "^3.11.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.0",
-    "redux-firestore": "^1.0.0",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
