--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@fontsource/roboto": "^4.5.8",
@@ -13,21 +14,22 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.0.3",
     "axios": "^0.27.2",
-    "file-saver": "^2.0.5",
     "firebase": "^9.9.2",
-    "json-set-map": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
     "react-google-charts": "^4.0.0",
+    "react-grid-gallery": "^1.0.0",
+    "react-image-lightbox": "^5.1.4",
     "react-minimal-pie-chart": "^8.3.0",
-    "react-redux": "^8.0.2",
+    "react-photo-gallery": "^8.0.0",
+    "react-photoswipe-gallery": "^2.2.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
     "react-transition-group": "^4.4.5",
-    "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
