--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/pluralize": "^0.0.29",
     "antd": "^5.0.3",
     "axios": "^0.27.2",
     "firebase": "^9.9.2",
+    "pluralize": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
