data overview page, charts

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/charts": "^1.4.2",
     "@ant-design/icons": "^4.8.0",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
@@ -41,6 +42,12 @@
     "react-photo-gallery": {
       "react": "18.2.0",
       "react-dom": "18.2.0"
+    },
+    "@ant-design/charts": {
+      "react": "18.2.0",
+      "react-dom": "18.2.0",
+      "@ant-design/icons": "^4.8.0",
+      "antd": "^5.0.3"
     }
   },
   "scripts": {
