--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
+    "@ant-design/colors": "^7.0.0",
     "@ant-design/icons": "^4.8.0",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
@@ -19,6 +20,7 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "antd": "^5.0.3",
+    "apexcharts": "^3.41.1",
     "axios": "^0.27.2",
     "firebase": "^9.9.2",
     "pluralize": "^8.0.0",
