--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-file-base64": "^1.0.3",
     "react-google-charts": "^4.0.0",
     "react-grid-gallery": "^1.0.0",
+    "react-masonry": "^1.0.7",
     "react-minimal-pie-chart": "^8.3.0",
     "react-photo-gallery": "^8.0.0",
     "react-photoswipe-gallery": "^2.2.2",
